samples/_failures_safe/1761398460_3f704e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1cdc293.c: In function ‘main’:
./samples/SAFE/__tmp_b1cdc293.c:141:13: error: expected declaration or statement at end of input
  141 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_b1cdc293.c:141:13: error: expected declaration or statement at end of input
